5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4125/executions/1863_2219.log
== TEST (2019-07-02 11:20:41) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("digite a matriz: ")))
v = zeros(shape[0], dtype = float)

print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:21:12) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("digite a matriz: ")))
v = zeros(size(x), dtype = float)

print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:22:01) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("digite a matriz: ")))
v = zeros(shape(0), dtype = float)

print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:22:28) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("digite a matriz: ")))
v = zeros(shape(x)[0], dtype = float)

print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:24:16) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("digite a matriz: ")))
v = zeros(shape(x)[0], dtype = float)
for i in range(size(x)):
	x[i,i]= v[i]
print(round(mean(x))
-- ERROR:
File "XXXX", line 8
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:24:22) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("digite a matriz: ")))
v = zeros(shape(x)[0], dtype = float)
for i in range(size(x)):
	x[i,i]= v[i]
print(round(mean(x)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:26:06) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("digite a matriz: ")))
v = zeros(shape(x)[0], dtype = float)
for i in range(size(x)):
	if x[i,i]//2:
		x[i,i]= v[i]
print(round(mean(x)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 11:26:10) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("digite a matriz: ")))
v = zeros(shape(x)[0], dtype = float)
for i in range(size(x)):
	if x[i,i]//2:
		x[i,i]= v[i]
print(round(mean(x)))
-- EXECUTION TIME:
1.05026
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1863/2219/main.py", line 6, in <module>
    if x[i,i]//2:
IndexError: index 3 is out of bounds for axis 0 with size 3

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 11:34:30) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("digite a matriz: ")))
v = zeros(shape(x)[0], dtype = float)

for i in range(size(x)):
	for j in range(size(x)):
		if i==j:
			v[i] = x[i+1,j]
print(round(mean(v)))
-- EXECUTION TIME:
0.907117
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1863/2219/main.py", line 9, in <module>
    v[i] = x[i+1,j]
IndexError: index 3 is out of bounds for axis 0 with size 3

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:34:33) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("digite a matriz: ")))
v = zeros(shape(x)[0], dtype = float)

for i in range(size(x)):
	for j in range(size(x)):
		if i==j:
			v[i] = x[i+1,j]
print(round(mean(v)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:35:55) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("digite a matriz: ")))
v = zeros(shape(x)[0], dtype = float)

for i in range(size(x)):
	for j in range(size(x)):
		if i==j:
			i = i + 1
			v[i] = x[i,j]
			i = i-1
print(round(mean(v)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 11:35:59) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("digite a matriz: ")))
v = zeros(shape(x)[0], dtype = float)

for i in range(size(x)):
	for j in range(size(x)):
		if i==j:
			i = i + 1
			v[i] = x[i,j]
			i = i-1
print(round(mean(v)))
-- EXECUTION TIME:
1.02386
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1863/2219/main.py", line 10, in <module>
    v[i] = x[i,j]
IndexError: index 3 is out of bounds for axis 0 with size 3

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:36:48) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("digite a matriz: ")))
v = zeros(shape(x)[0], dtype = float)

for i in range(shape(x)[1]):
	for j in range(shape(x)[1]):
		if i==j:
			i = i + 1
			v[i] = x[i,j]
			i = i-1
print(round(mean(v),2
-- ERROR:
File "XXXX", line 13
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:37:05) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("digite a matriz: ")))
v = zeros(shape(x)[0], dtype = float)

for i in range(shape(x)[1]):
	for j in range(shape(x)[1]):
		if i==j:
			i = i + 1
			v[a]= x[i,j]
			i = i-1
			a = a +1
print(round(mean(v),2
-- ERROR:
File "XXXX", line 14
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:37:18) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("digite a matriz: ")))
v = zeros(shape(x)[0], dtype = float)

for i in range(shape(x)[1]):
	for j in range(shape(x)[1]):
		if i==j:
			i = i + 1
			v[a]= x[i,j]
			i = i-1
			a = a +1
print(round(mean(v),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:37:27) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("digite a matriz: ")))
v = zeros(shape(x)[0], dtype = float)
a = 0
for i in range(shape(x)[1]):
	for j in range(shape(x)[1]):
		if i==j:
			i = i + 1
			v[a]= x[i,j]
			i = i-1
			a = a +1
print(round(mean(v),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:38:37) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("digite a matriz: ")))
v = zeros(shape(x)[0], dtype = float)
a = 0
for i in range(shape(x)[0]:
	for j in range(shape(x)[0]):
		if i<j:
			v[a]= x[i,j]
			a = a +1
print(round(mean(v),2))
-- ERROR:
File "XXXX", line 6
    for i in range(shape(x)[0]:
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:38:45) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("digite a matriz: ")))
v = zeros(shape(x)[0], dtype = float)
a = 0
for i in range(shape(x)[0]):
	for j in range(shape(x)[0]):
		if i<j:
			v[a]= x[i,j]
			a = a +1
print(round(mean(v),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:39:29) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("digite a matriz: ")))
v = zeros(shape(x)[0], dtype = float)
a = 0
for i in range(shape(x)[0]):
	for j in range(shape(x)[0]):
		if i<j:
			v[a]= x[i,j]
			a = a +1
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:41:16) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("digite a matriz: ")))
v = zeros(shape(x)[0], dtype = float)
a = 0
for i in range(shape(x)[0]):
	for j in range(shape(x)[0]):
		if i-1==j:
			v[a]= x[i,j]
			a = a +1
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:42:01) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("digite a matriz: ")))
v = zeros(shape(x)[0], dtype = float)
a = 0
for i in range(shape(x)[0]):
	for j in range(shape(x)[0]):
		if i-1==j:
			v[a]= x[i,j]
			a = a +1
print(round(mean(v),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 11:42:24) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("digite a matriz: ")))
v = zeros(shape(x)[0], dtype = float)
a = 0
for i in range(shape(x)[0]):
	for j in range(shape(x)[0]):
		if i-1==j:
			v[a]= x[i,j]
			a = a +1
print(round(mean(v),2))
-- EXECUTION TIME:
0.934476
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
30.67
---- user output:
17.33
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.56
---- user output:
0.34
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
45.78
---- user output:
60.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:42:42) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("digite a matriz: ")))
v = zeros(shape(x)[0]-1, dtype = float)
a = 0
for i in range(shape(x)[0]):
	for j in range(shape(x)[0]):
		if i-1==j:
			v[a]= x[i,j]
			a = a +1
print(round(mean(v),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 11:42:47) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("digite a matriz: ")))
v = zeros(shape(x)[0]-1, dtype = float)
a = 0
for i in range(shape(x)[0]):
	for j in range(shape(x)[0]):
		if i-1==j:
			v[a]= x[i,j]
			a = a +1
print(round(mean(v),2))
-- EXECUTION TIME:
1.08364
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
30.67
---- user output:
26.0
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.56
---- user output:
0.5
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
45.78
---- user output:
75.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:43:29) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("digite a matriz: ")))
k = shape(x)[0] - 1
v = zeros(k, dtype = float)
a = 0
for i in range(shape(x)[0]):
	for j in range(shape(x)[0]):
		if i-1==j:
			v[a]= x[i,j]
			a = a +1
print(round(mean(v),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 11:43:34) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("digite a matriz: ")))
k = shape(x)[0] - 1
v = zeros(k, dtype = float)
a = 0
for i in range(shape(x)[0]):
	for j in range(shape(x)[0]):
		if i-1==j:
			v[a]= x[i,j]
			a = a +1
print(round(mean(v),2))
-- EXECUTION TIME:
1.11607
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
30.67
---- user output:
26.0
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.56
---- user output:
0.5
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
45.78
---- user output:
75.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:44:20) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("digite a matriz: ")))
k = shape(x)[0]
v = zeros(k, dtype = float)
a = 0
for i in range(shape(x)[0]):
	for j in range(shape(x)[0]):
		if i<j:
			v[a]= x[i,j]
			a = a +1
print(round(mean(v),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 11:44:25) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("digite a matriz: ")))
k = shape(x)[0]
v = zeros(k, dtype = float)
a = 0
for i in range(shape(x)[0]):
	for j in range(shape(x)[0]):
		if i<j:
			v[a]= x[i,j]
			a = a +1
print(round(mean(v),2))
-- EXECUTION TIME:
1.12549
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
30.67
---- user output:
4.67
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.56
---- user output:
0.46
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
45.78
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:44:54) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("digite a matriz: ")))
k = shape(x)[0]
v = zeros(k, dtype = float)
a = 0
for i in range(shape(x)[0]):
	for j in range(shape(x)[0]):
		if i<j:
			v[a]= x[i,j]
			a = a +1
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:45:36) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("digite a matriz: ")))
k = shape(x)[0]
v = zeros(k, dtype = float)
a = 0
for i in range(shape(x)[0]):
	for j in range(shape(x)[0]):
		if j>i:
			v[a]= x[i,j]
			a = a +1
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:46:07) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("digite a matriz: ")))
k = shape(x)[0]
v = zeros(k, dtype = float)
a = 0
for i in range(shape(x)[0]):
	for j in range(shape(x)[0]):
		if i>j:
			v[a]= x[i,j]
			a = a +1
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 11:46:34) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("digite a matriz: ")))
k = shape(x)[0]
v = zeros(k, dtype = float)
a = 0
for i in range(shape(x)[0]):
	for j in range(shape(x)[0]):
		if i>j:
			v[a]= x[i,j]
			a = a +1
print(round(mean(v),2))
-- EXECUTION TIME:
1.01136
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
30.67
---- user output:
30.67
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.56
---- user output:
0.56
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
45.78
---- user output:

-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:46:46) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("digite a matriz: ")))
k = shape(x)[0]
v = zeros(k, dtype = float)
a = 0
for i in range(shape(x)[0]):
	for j in range(shape(x)[0]):
		if i>j:
			v[a]= x[i,j]
			a = a +1
print(round(mean(v),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 11:47:43) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("digite a matriz: ")))
k = shape(x)[0]
v = zeros(k, dtype = float)
a = 0
for i in range(shape(x)[0]):
	for j in range(shape(x)[0]):
		if i>j:
			v[a]= x[i,j]
			a = a + 1
l = mean(v)
print(round(l,2))
-- EXECUTION TIME:
1.26891
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
30.67
---- user output:
30.67
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.56
---- user output:
0.56
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
45.78
---- user output:

-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:48:19) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("digite a matriz: ")))
k = shape(x)[0]
v = zeros(k, dtype = float)
a = 0
for i in range(shape(x)[0]):
	for j in range(shape(x)[0]):
		if i>j:
			v[a]= x[i,j]
			a = a + 1
l = mean(v)
print(round(l,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 11:48:59) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("digite a matriz: ")))
k = shape(x)[0]
v = zeros(k, dtype = float)
a = 0
for i in range(shape(x)[0]):
	for j in range(shape(x)[0]):
		if i>j:
			v[a]= x[i,j]
			a = a + 1
l = mean(v)
print(round(l,2))
-- EXECUTION TIME:
1.2209
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
30.67
---- user output:
30.67
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.56
---- user output:
0.56
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
45.78
---- user output:

-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:49:52) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("digite a matriz: ")))
k = shape(x)[0]
v = zeros(k, dtype = float)
a = 0
for i in range(shape(x)[0]):
	for j in range(shape(x)[0]):
		if (i>j):
			v[a]= x[i,j]
			a = a + 1
l = mean(v)
print(round(l,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:50:02) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("digite a matriz: ")))
k = shape(x)[0]
v = zeros(k, dtype = float)
a = 0
for i in range(shape(x)[0]):
	for j in range(shape(x)[0]):
		if (i>j):
			v[a]= x[i,j]
			a = a + 1
l = mean(v)
print(round(l,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:50:15) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("digite a matriz: ")))
k = shape(x)[0]
v = zeros(k, dtype = float)
a = 0
for i in range(shape(x)[0]):
	for j in range(shape(x)[0]):
		if (i>j):
			v[a]= x[i,j]
			a = a + 1
l = mean(v)
print(round(l,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:50:20) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("digite a matriz: ")))
k = shape(x)[0]
v = zeros(k, dtype = float)
a = 0
for i in range(shape(x)[0]):
	for j in range(shape(x)[0]):
		if (i>j):
			v[a]= x[i,j]
			a = a + 1
l = mean(v)
print(round(l,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:51:32) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("digite a matriz: ")))
k = shape(x)[0]
v = zeros(k, dtype = float)
a = 0
for i in range(shape(x)[0]):
	for j in range(shape(x)[0]):
		if (i>j):
			v[a]= x[i,j]
			a = a + 1
l = sum(v)/size(v)
print(round(l,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:52:18) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("digite a matriz: ")))
k = shape(x)[0]
v = zeros(k, dtype = float)
a = 0
for i in range(shape(x)[0]):
	for j in range(shape(x)[0]):
		if (i>j):
			v[a]= x[i,j]
			a = a + 1
l = sum(v)/size(v)
print(round(l,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:52:40) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("digite a matriz: ")))
k = shape(x)[0]
v = zeros(k, dtype = float)
a = 0
for i in range(shape(x)[0]):
	for j in range(shape(x)[0]):
		if (i>j):
			v[a]= x[i,j]
			a = a + 1
l = sum(v)/size(v)
print(round(l,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 11:53:08) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("digite a matriz: ")))
k = shape(x)[0]
v = zeros(k, dtype = float)
a = 0
for i in range(shape(x)[0]):
	for j in range(shape(x)[0]):
		if (i>j):
			v[a]= x[i,j]
			a = a + 1
l = sum(v)/size(v)
print(round(l,2))
-- EXECUTION TIME:
1.00983
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
30.67
---- user output:
30.67
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.56
---- user output:
0.56
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
45.78
---- user output:

-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 11:53:21) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("digite a matriz: ")))
k = shape(x)[0]
v = zeros(k, dtype = int)
a = 0
for i in range(shape(x)[0]):
	for j in range(shape(x)[0]):
		if (i>j):
			v[a]= x[i,j]
			a = a + 1
l = sum(v)/size(v)
print(round(l,2))
-- EXECUTION TIME:
1.03922
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
30.67
---- user output:
30.67
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.56
---- user output:
0.0
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
45.78
---- user output:

-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 11:53:30) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("digite a matriz: ")))
k = shape(x)[0]
v = zeros(k, dtype = float)
a = 0
for i in range(shape(x)[0]):
	for j in range(shape(x)[0]):
		if (i>j):
			v[a]= x[i,j]
			a = a + 1
l = sum(v)/size(v)
print(round(l,2))
-- EXECUTION TIME:
1.07559
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
30.67
---- user output:
30.67
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.56
---- user output:
0.56
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
45.78
---- user output:

-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 11:53:56) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("digite a matriz: ")))
k = shape(x)[0]
v = zeros(k, dtype = float)
a = 0
for i in range(shape(x)[0]):
	for j in range(shape(x)[0]):
		if (i>j):
			v[a]= x[i,j]
			a = a + 1
l = sum(v)/size(v)
print(round(l,2))
-- EXECUTION TIME:
1.16119
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
30.67
---- user output:
30.67
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.56
---- user output:
0.56
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
45.78
---- user output:

-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 11:54:00) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("digite a matriz: ")))
k = shape(x)[0]
v = zeros(k, dtype = float)
a = 0
for i in range(shape(x)[0]):
	for j in range(shape(x)[0]):
		if (i>j):
			v[a]= x[i,j]
			a = a + 1
l = sum(v)/size(v)
print(round(l,2))
-- EXECUTION TIME:
1.07692
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
30.67
---- user output:
30.67
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.56
---- user output:
0.56
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
45.78
---- user output:

-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:54:20) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("digite a matriz: ")))
k = shape(x)[0]
v = zeros(k, dtype = float)
a = 0
for i in range(shape(x)[0]):
	for j in range(shape(x)[0]):
		if (i>j):
			v[a]= x[i,j]
			a = a + 1
l = sum(v)/size(v)
print(round(l,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:54:33) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("digite a matriz: ")))
k = shape(x)[0]
v = zeros(k, dtype = float)
a = 0
for i in range(shape(x)[0]):
	for j in range(shape(x)[0]):
		if (i>j):
			v[a]= x[i,j]
			a = a + 1
l = sum(v)/size(v)
print(round(l,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 11:54:39) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("digite a matriz: ")))
k = shape(x)[0]
v = zeros(k, dtype = float)
a = 0
for i in range(shape(x)[0]):
	for j in range(shape(x)[0]):
		if (i>j):
			v[a]= x[i,j]
			a = a + 1
l = sum(v)/size(v)
print(round(l,2))
-- EXECUTION TIME:
1.83597
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
30.67
---- user output:
30.67
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.56
---- user output:
0.56
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
45.78
---- user output:

-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 11:54:40) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("digite a matriz: ")))
k = shape(x)[0]
v = zeros(k, dtype = float)
a = 0
for i in range(shape(x)[0]):
	for j in range(shape(x)[0]):
		if (i>j):
			v[a]= x[i,j]
			a = a + 1
l = sum(v)/size(v)
print(round(l,2))
-- EXECUTION TIME:
1.59244
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
30.67
---- user output:
30.67
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.56
---- user output:
0.56
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
45.78
---- user output:

-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
